# Loaf-and-Ledger

./: .gitignore  CHANGELOGS.md  README.md  WALKTHROUGH.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  main.py  schemas.py  seed.py
backend/app/models/: __init__.py  base.py  budget.py  category.py  fx.py  jurisdiction.py  salary.py  transaction.py  user.py
backend/app/routers/: __init__.py  analytics.py  budgets.py  dashboard.py  export.py  fx.py  ledger.py  meta.py  salary.py
backend/app/services/: __init__.py  analytics.py  budgets.py  currency.py  fx_live.py  user.py
backend/app/tax/: __init__.py  brackets.py  engine.py  models.py
backend/app/tax/regions/: __init__.py  au.py  de.py  ph.py  us.py
backend/migrations/: env.py
backend/migrations/versions/: 7d3c0bfb8b1d_initial_schema.py  9b0d1b6f6c1d_add_fund_overrides.py  d64f175e0e83_add_occurred_time_and_fx_rate_history.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_budgets_period.py  test_fund_override.py  test_fx_and_analytics.py  test_monthly_by_category.py
backend/tests/unit/: test_budget_periods.py  test_fx_live.py  test_tax_engine.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: queries.ts
frontend/src/components/: BarChart.tsx  Brand.tsx  FilterBar.tsx  HighlightCard.tsx  HoverTabs.tsx  Layout.tsx  LineChart.tsx  Money.tsx  StackedBarChart.tsx  layout.css
frontend/src/lib/: api.ts  (+4 more)
(+7 files in other folders)
