[project]
name = "loaf-and-ledger-backend"
version = "0.0.0"
description = "Loaf & Ledger — personal-finance backend with regional salary/tax rules and rule-based insights"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "psycopg[binary]==3.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore:datetime.datetime.utcnow.. is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends()` in argument defaults is the intended pattern.
ignore = ["B008"]
